--- a/ICIN_User_UI/build.gradle
+++ b/ICIN_User_UI/build.gradle
@@ -1,3 +1,13 @@
+plugins {
+    id 'java'
+    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
+    id 'org.springframework.boot' version '2.6.1'
+    id 'pl.allegro.tech.build.axion-release' version '1.13.6'
+    id 'com.palantir.docker' version '0.31.0'
+    id 'com.palantir.docker-run' version '0.31.0'
+    id 'jp.classmethod.aws.reboot.cloudformation' version '0.45'
+}
+
 String dockerHubUsernameProperty = findProperty('dockerHubUsername') ?: 'sumeetyajnik'
 String imageName = "${dockerHubUsernameProperty}/sy-fsd-spring-boot-api:$version"
 
