--- a/ICIN_User_UI/build.gradle
+++ b/ICIN_User_UI/build.gradle
@@ -9,10 +9,11 @@ plugins {
 }
 
 String dockerHubUsernameProperty = findProperty('dockerHubUsername') ?: 'sumeetyajnik'
-String imageName = "${dockerHubUsernameProperty}/sy-fsd-spring-boot-api:$version"
+String imageName = "${dockerHubUsernameProperty}/icin-user-ui:$version"
 
-docker build . -t sumeetyajnik/icin-user-ui
-
+docker {
+    name imageName
+}
 
 dockerRun {
     name project.name
