--- a/icin-user-ui/ecs.yml
+++ b/icin-user-ui/ecs.yml
@@ -12,16 +12,16 @@ Resources:
   Cluster:
     Type: AWS::ECS::Cluster
     Properties:
-      ClusterName: deployment-example-cluster
+      ClusterName: deployment-example-clusterUI
   ServiceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: ServiceSecurityGroup
+      GroupName: ServiceSecurityGroupUserUI
       GroupDescription: Security group for service
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: 8080
-          ToPort: 8080
+          FromPort: 4200
+          ToPort: 4200
           CidrIp: 0.0.0.0/0
   TaskDefinition:
     Type: AWS::ECS::TaskDefinition
@@ -34,7 +34,7 @@ Resources:
         - Name: !Sub ${ServiceName}-container
           Image: !Sub ${DockerHubUsername}/${ServiceName}:${ServiceVersion}
           PortMappings:
-            - ContainerPort: 8080
+            - ContainerPort: 4200
       RequiresCompatibilities:
         - EC2
         - FARGATE
