--- a/icin-admin-ui/AdminPortal/build.gradle
+++ b/icin-admin-ui/AdminPortal/build.gradle
@@ -16,7 +16,7 @@ docker {
 }
 
 dockerRun {
-    name project.name
+    name 'icin-admin-ui'
     image imageName
     ports '8080:8080'
     clean true
@@ -27,7 +27,7 @@ aws {
 }
 
 cloudFormation {
-    stackName "$project.name-stack"
+    stackName "icin-admin-ui-stack"
     stackParams([
             SubnetID: findProperty('subnetId') ?: '',
             ServiceName: project.name,
